--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,8 @@
         <jstl.version>1.2</jstl.version>
         <apache.tiles.version>2.2.2</apache.tiles.version>
 
-        <!-- DB -->
-        <mongo.java.driver.version>3.0.0</mongo.java.driver.version>
+        <!--&lt;!&ndash; DB &ndash;&gt;-->
+        <!--<mongo.java.driver.version>3.0.0</mongo.java.driver.version>-->
 
 
         <!-- Commons -->
@@ -139,17 +139,17 @@
                 <version>${spring.orm.version}</version>
             </dependency>
             <!-- Spring Data MongoDB -->
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-mongodb</artifactId>
-                <version>${spring.data.mongo.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.mongodb</groupId>
-                <artifactId>mongo-java-driver</artifactId>
-                <version>${mongo.java.driver.version}</version>
-                <type>jar</type>
-            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>org.springframework.data</groupId>-->
+                <!--<artifactId>spring-data-mongodb</artifactId>-->
+                <!--<version>${spring.data.mongo.version}</version>-->
+            <!--</dependency>-->
+            <!--<dependency>-->
+                <!--<groupId>org.mongodb</groupId>-->
+                <!--<artifactId>mongo-java-driver</artifactId>-->
+                <!--<version>${mongo.java.driver.version}</version>-->
+                <!--<type>jar</type>-->
+            <!--</dependency>-->
 
             <!-- Spring RabbitMQ -->
             <dependency>
@@ -239,28 +239,6 @@
                 <version>${apache.tiles.version}</version>
             </dependency>
 
-            <!-- hibernate -->
-            <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-core</artifactId>
-                <version>${hibernate.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-entitymanager</artifactId>
-                <version>${hibernate.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-annotations</artifactId>
-                <version>${hibernate.annotation.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-validator</artifactId>
-                <version>${hibernate.validator.version}</version>
-            </dependency>
-
             <!-- java validator -->
             <dependency>
                 <groupId>javax.validation</groupId>
@@ -320,23 +298,6 @@
                 <groupId>org.aspectj</groupId>
                 <artifactId>aspectjweaver</artifactId>
                 <version>${aspectj.version}</version>
-            </dependency>
-
-            <!-- database driver-->
-            <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
-                <version>${mysql.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.oracle</groupId>
-                <artifactId>oracle-thin</artifactId>
-                <version>${oracle.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.hsqldb</groupId>
-                <artifactId>hsqldb</artifactId>
-                <version>${hsql.version}</version>
             </dependency>
 
             <!-- unit test -->
