--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>uk.ac.ebi.ddi.maven</groupId>
     <artifactId>ddi-base-master</artifactId>
-    <version>1.0.0</version>
+    <version>1.0</version>
     <packaging>pom</packaging>
 
     <name>DDI master pom file</name>
@@ -33,6 +33,7 @@
 
         <!-- Spring -->
         <spring.version>4.2.2.RELEASE</spring.version>
+        <spring.batch.version>3.0.5.RELEASE</spring.batch.version>
         <spring.security.version>3.2.4.RELEASE</spring.security.version>
         <spring.data.mongo.version>1.7.0.RELEASE</spring.data.mongo.version>
         <spring.rmqp.version>1.0.0.RELEASE</spring.rmqp.version>
@@ -52,10 +53,15 @@
         <!-- Commons -->
         <commons.dbcp.version>1.2.2</commons.dbcp.version>
         <commons.lang.version>2.6</commons.lang.version>
+        <commons.lang3.version>3.0</commons.lang3.version>
         <commons.io.version>1.3.2</commons.io.version>
         <commons.httpclient.version>4.5</commons.httpclient.version>
         <commons.fileupload.version>1.2</commons.fileupload.version>
         <java.validation.api.version>1.1.0.Final</java.validation.api.version>
+        <common.cli.version>1.2</common.cli.version>
+        <commons.configuration.version>1.10</commons.configuration.version>
+        <commons.collections.version>3.2.1</commons.collections.version>
+        <common.net.version>3.3</common.net.version>
 
         <!-- Misc -->
         <solrj.version>4.1.0</solrj.version>
@@ -83,11 +89,28 @@
         <maven.war.plugin>2.1.1</maven.war.plugin>
         <maven.surefire.plugin>2.12</maven.surefire.plugin>
         <maven.jetty.plugin>6.1.10</maven.jetty.plugin>
+
+        <!-- JAXB -->
+        <jaxb-xjc.version>2.2.7</jaxb-xjc.version>
+        <jackson.databind.version>2.5.2</jackson.databind.version>
+        <fastutil.version>6.5.1</fastutil.version>
+        <woodstox.version>4.4.1</woodstox.version>
+
+        <org.json.version>20090211</org.json.version>
+        <gson.version>2.3.1</gson.version>
+
     </properties>
 
 
     <dependencyManagement>
         <dependencies>
+            <!-- JUNIT -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+            </dependency>
+
             <!-- Spring -->
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -153,11 +176,30 @@
                 <artifactId>spring-expression</artifactId>
                 <version>${spring.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-test</artifactId>
                 <version>${spring.version}</version>
                 <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.batch</groupId>
+                <artifactId>spring-batch-core</artifactId>
+                <version>${spring.batch.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.batch</groupId>
+                <artifactId>spring-batch-infrastructure</artifactId>
+                <version>${spring.batch.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.batch</groupId>
+                <artifactId>spring-batch-test</artifactId>
+                <version>${spring.batch.version}</version>
             </dependency>
 
             <!-- Spring security -->
@@ -180,6 +222,12 @@
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-taglibs</artifactId>
                 <version>${spring.security.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-mongodb</artifactId>
+                <version>${spring.data.mongo.version}</version>
             </dependency>
 
             <!--Spring social -->
@@ -224,6 +272,11 @@
 
             <!--apache commons-->
             <dependency>
+                <groupId>commons-cli</groupId>
+                <artifactId>commons-cli</artifactId>
+                <version>${common.cli.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>commons-dbcp</groupId>
                 <artifactId>commons-dbcp</artifactId>
                 <version>${commons.dbcp.version}</version>
@@ -232,6 +285,11 @@
                 <groupId>commons-lang</groupId>
                 <artifactId>commons-lang</artifactId>
                 <version>${commons.lang.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons.lang3.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -247,6 +305,25 @@
                 <groupId>commons-fileupload</groupId>
                 <artifactId>commons-fileupload</artifactId>
                 <version>${commons.fileupload.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-configuration</groupId>
+                <artifactId>commons-configuration</artifactId>
+                <version>${commons.configuration.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-collections</groupId>
+                <artifactId>commons-collections</artifactId>
+                <version>${commons.collections.version}</version>
+                <optional>true</optional>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-net</groupId>
+                <artifactId>commons-net</artifactId>
+                <version>${common.net.version}</version>
             </dependency>
 
             <!-- CGLIB2 -->
@@ -276,30 +353,6 @@
                 <version>${aspectj.version}</version>
             </dependency>
 
-            <!--&lt;!&ndash; unit test &ndash;&gt;-->
-            <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
-                <!--&lt;!&ndash;<groupId>junit</groupId>&ndash;&gt;-->
-                <!--&lt;!&ndash;<artifactId>junit-dep</artifactId>&ndash;&gt;-->
-                <!--&lt;!&ndash;<version>${junit.version}</version>&ndash;&gt;-->
-                <!--&lt;!&ndash;<scope>test</scope>&ndash;&gt;-->
-                <!--&lt;!&ndash;<exclusions>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<exclusion>&ndash;&gt;-->
-                        <!--&lt;!&ndash;<groupId>org.hamcrest</groupId>&ndash;&gt;-->
-                        <!--&lt;!&ndash;<artifactId>hamcrest-core</artifactId>&ndash;&gt;-->
-                    <!--&lt;!&ndash;</exclusion>&ndash;&gt;-->
-                <!--&lt;!&ndash;</exclusions>&ndash;&gt;-->
-            <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
-            <!--<dependency>-->
-                <!--<groupId>org.hamcrest</groupId>-->
-                <!--<artifactId>hamcrest-library</artifactId>-->
-                <!--<version>${hamcrest.version}</version>-->
-                <!--<scope>test</scope>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>org.hamcrest</groupId>-->
-                <!--<artifactId>hamcrest-core</artifactId>-->
-                <!--<version>${hamcrest.version}</version>-->
-                <!--<scope>test</scope>-->
             <!--</dependency>-->
             <dependency>
                 <groupId>org.mockito</groupId>
@@ -333,6 +386,61 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
                 <version>${slf4j-log4j12.version}</version>
+            </dependency>
+
+            <!-- JAXB -->
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-xjc</artifactId>
+                <version>${jaxb-xjc.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-impl</artifactId>
+                <version>${jaxb-xjc.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.databind.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>it.unimi.dsi</groupId>
+                <artifactId>fastutil</artifactId>
+                <version>${fastutil.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.codehaus.woodstox</groupId>
+                <artifactId>woodstox-core-asl</artifactId>
+                <version>${woodstox.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons.io.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons.lang.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>${org.json.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
